--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nth-select.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <title>nth selectors</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="container">
+        <h1>:nth selectors <em>explained</em></h1>
+      </div>
+      <div class="container boxes">
+        <div class="box box-1"><p>1</p></div>
+        <div class="box box-2"><p>2</p></div>
+        <div class="box box-3"><p>3</p></div>
+        <div class="box box-4"><p>4</p></div>
+      </div>
+    </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
