styling and colors added

--- a/index.html
+++ b/index.html
@@ -18,14 +18,24 @@
   </head>
   <body>
     <div class="container">
-      <div class="container">
-        <h1>:nth selectors <em>explained</em></h1>
+            <!--
+      <div class="container title">
+        <h1>:nth-child <em>explained</em></h1>
       </div>
+
+      <div class="parent-name">
+        <p>(Parent Container - class name "boxes")</p>
+      </div>
+    -->
       <div class="container boxes">
-        <div class="box box-1"><p>1</p></div>
-        <div class="box box-2"><p>2</p></div>
-        <div class="box box-3"><p>3</p></div>
-        <div class="box box-4"><p>4</p></div>
+        <div class="box"><p>Child 1</p></div>
+        <div class="box"><p>Child 2</p></div>
+        <div class="box"><p>Child 3</p></div>
+        <div class="box"><p>Child 4</p></div>
+        <div class="box"><p>Child 5</p></div>
+        <div class="box"><p>Child 6</p></div>
+        <div class="box"><p>Child 7</p></div>
+        <div class="box"><p>Child 8</p></div>
       </div>
     </div>
 
